# PyTorch-and-TensorFlow-Demo

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  test_setup.py
docs/: contributing.md
notebooks/01-foundations/: data-prep-comparison.ipynb  numpy-essentials.ipynb  pandas-for-ml.ipynb
notebooks/02-framework-fundamentals/: computational-graphs.ipynb  debugging-strategies.ipynb  gradients-and-backprop.ipynb  tensors-and-operations.ipynb
notebooks/03-nlp-applications/: embeddings-comparison.ipynb  sequence-modeling.ipynb  text-classification.ipynb  text-preprocessing.ipynb
notebooks/04-tabular-data/: classification-comparison.ipynb  feature-engineering.ipynb  neural-networks-tabular.ipynb  regression-patterns.ipynb
notebooks/05-time-series/: attention-mechanisms.ipynb  forecasting-models.ipynb  lstm-gru-comparison.ipynb  sequence-preparation.ipynb
notebooks/06-production-bridge/: api-endpoints.ipynb  deployment-basics.ipynb  inference-patterns.ipynb  model-serialization.ipynb
reference/: comparison-matrix.md  pytorch-quick-reference.md  tensorflow-quick-reference.md  when-to-use-what.md
src/foundations/: data_utils.py  preprocessing.py
src/pytorch_examples/nlp/: text_classifier.py
src/pytorch_examples/tabular/: mlp_classifier.py
src/tensorflow_examples/nlp/: text_classifier.py
src/tensorflow_examples/tabular/: mlp_classifier.py
src/utils/: comparison_tools.py  config.py  evaluation.py  experiment.py  visualization.py
