[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-and-tensorflow-demo"
version = "0.1.0"
description = "Side-by-side PyTorch and TensorFlow tutorial series with practical examples"
readme = "README.md"
license = "MIT"
authors = [{name = "Karthik Ravi"}]
requires-python = ">=3.11"
keywords = ["pytorch", "tensorflow", "machine-learning", "tutorial", "demo", "ml"]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "tensorflow>=2.13.0",
    "tensorflow-datasets>=4.9.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "notebook>=6.5.0",
    "nltk>=3.8.0",
    "spacy>=3.6.0",
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    "tqdm>=4.65.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "graphviz>=0.20.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "pytest>=7.4.0",
    "pytest-asyncio",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "black",
]

[project.urls]
Homepage = "https://github.com/karthik-ravi-1537/PyTorch-and-TensorFlow-Demo"
Repository = "https://github.com/karthik-ravi-1537/PyTorch-and-TensorFlow-Demo.git"
Issues = "https://github.com/karthik-ravi-1537/PyTorch-and-TensorFlow-Demo/issues"

[tool.black]
line-length = 120
skip-string-normalization = false
target-version = ['py311']

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [".venv", "venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes errors
    "I",    # import sorting
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function calls in argument defaults
    "N803",  # argument names should be lowercase (X is conventional in ML)
    "N806",  # variable names should be lowercase (X, A, B conventional for matrices)
    "N812",  # lowercase imported as non-lowercase (F for functional is common)
    "N816",  # mixedCase variable in global scope (ML naming conventions)
    "E402",  # module level import not at top (acceptable in notebooks for pedagogy)
    "B007",  # loop control variable not used (acceptable in educational examples)
]

[tool.ruff.lint.per-file-ignores]
"notebooks/**/*.ipynb" = ["F401"]  # Allow unused imports in educational notebooks

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
